--- a/styles.css
+++ b/styles.css
@@ -449,6 +449,11 @@ button.disabled {
     gap: 10px;
 }
 
+.avail-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); 
+}
+
 /* Media Queries for Mobile Devices */
 @media (max-width: 768px) {
     #title-container {
@@ -491,6 +496,11 @@ button.disabled {
         grid-template-columns: repeat(2, 1fr); /* Adjust grid layout */
     }
 
+    .avail-grid {
+        grid-template-columns: repeat(2, 1fr); 
+        gap: 10px;
+    }
+
     .purchased-upgrade img, .upgrade-img {
         width: 150px; /* Smaller image size */
         height: 150px; /* Maintain aspect ratio */
@@ -500,6 +510,10 @@ button.disabled {
         font-size: 14px; /* Adjust button font size */
         padding: 8px 16px; /* Adjust button padding */
         width: auto; /* Ensure buttons resize */
+    }
+
+    #upgradeList {
+    font-size: 0.8em; 
     }
 }
 
@@ -839,7 +853,7 @@ input:checked + .slider:before {
     transform: translateX(14px);
 }
 
-.trade-status-overlay {
+.status-overlay {
     position: absolute;
     padding: 10px 20px;
     background-color: #f8d7da;
@@ -852,13 +866,13 @@ input:checked + .slider:before {
     max-width: 80%; /* Ensure it doesn't overflow on small screens */
 }
 
-.trade-status-overlay.success {
+.status-overlay.success {
     background-color: #d4edda;
     color: #155724;
     border-color: #c3e6cb;
 }
 
-.trade-status-overlay.error {
+.status-overlay.error {
     background-color: #f8d7da;
     color: #721c24;
     border-color: #f5c6cb;
